associated author with points
