# src/swagger.json
@@ -10,8 +10,9 @@
     }
   },
   "host": "localhost:8010",
-  "basePath": "",
-  "tags": [{
+  "basePath": "/",
+  "tags": [
+    {
       "name": "health",
       "description": "Check health of server"
     },
@@ -23,10 +24,19 @@
   "schemes": [
     "http"
   ],
+  "securityDefinitions": {
+    "Bearer": {
+      "type": "apiKey",
+      "name": "Authorization",
+      "in": "header"
+    }
+  },
   "paths": {
     "/health": {
       "get": {
-        "tags": ["health"],
+        "tags": [
+          "health"
+        ],
         "description": "Get health status of server",
         "responses": {
           "200": {
@@ -35,19 +45,23 @@
         }
       }
     },
-    "/signup": {      
+    "/signup": {
       "post": {
-        "tags": ["Author"],
+        "tags": [
+          "Author"
+        ],
         "description": "Create new Author",
         "operationId": "Create new Author ",
-        "parameters": [{
-          "name": "author",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/Author"
+        "parameters": [
+          {
+            "name": "author",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Author"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": "Added a new author to list of Authors",
@@ -64,21 +78,23 @@
         }
       }
     },
-
     "/login": {
-      
       "post": {
-        "tags": ["Author"],
+        "tags": [
+          "Author"
+        ],
         "description": "Login Author",
         "operationId": "Login Author ",
-        "parameters": [{
-          "name": "author",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/Author"
+        "parameters": [
+          {
+            "name": "author",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Author"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": "Succesfully Logged in Author",
@@ -95,19 +111,28 @@
         }
       }
     },
-    "/points": {      
+    "/points": {
       "post": {
-        "tags": ["Points"],
+        "tags": [
+          "Points"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "description": "Create new Point",
         "operationId": "Create new Point ",
-        "parameters": [{
-          "name": "point",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/Point"
+        "parameters": [
+          {
+            "name": "point",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Point"
+            }
           }
-        }],
+        ],
         "responses": {
           "200": {
             "description": "Added a new point to list of Points",
@@ -124,27 +149,39 @@
         }
       },
       "get": {
-        "tags": ["Points"],
+        "tags": [
+          "Points"
+        ],
         "summary": "Get points",
         "description": "Returns all the points from server",
-        "parameters": [{
+        "parameters": [
+          {
             "name": "limit",
             "in": "query",
             "description": "The retro points that needs to be fetched.",
             "required": false,
-            "type": "string"
+            "type": "integer",
+            "default": 25
           },
           {
             "name": "offset",
             "in": "query",
             "description": "The retro points that needs to be fetched.",
             "required": false,
+            "type": "integer",
+            "default": 0
+          },
+          {
+            "name": "category",
+            "in": "query",
+            "description": "Filter by category",
+            "required": false,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "A List of Points",
+            "description": "A List of",
             "schema": {
               "$ref": "#/definitions/Point"
             }
@@ -156,22 +193,26 @@
             }
           }
         }
-      }      
+      }
     },
     "/points/{id}": {
       "get": {
-        "tags": ["Points"],
-        "summary" : "Get Point corresponding to the id",
+        "tags": [
+          "Points"
+        ],
+        "summary": "Get Point corresponding to the id",
         "description": "Return points based on ID",
         "operationId": "find point by id",
-        "parameters": [{
-          "name": "id",
-          "in": "path",
-          "description": "ID of retro point to fetch",
-          "required": true,
-          "type": "integer",
-          "format": "int64"
-        }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of retro point to fetch",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
         "responses": {
           "200": {
             "description": "point response",
@@ -193,26 +234,77 @@
           }
         }
       },
-
       "patch": {
-        "tags": ["Points"],
+        "tags": [
+          "Points"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
         "description": "update points based on ID",
         "operationId": "update point by id",
-        "parameters": [{
-          "name": "id",
-          "in": "path",
-          "description": "ID of retro point to update",
-          "required": true,
-          "type": "integer",
-          "format": "int64"
-        },{
-          "name": "point",
-          "in": "body",
-          "required": true,
-          "schema": {
-            "$ref": "#/definitions/Point"
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of retro point to update",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          },
+          {
+            "name": "point",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Point"
+            }
           }
-        }],
+        ],
+        "responses": {
+          "200": {
+            "description": "point response",
+            "schema": {
+              "$ref": "#/definitions/Point"
+            }
+          },
+          "404": {
+            "description": "POINTS_NOT_FOUND_ERROR",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          },
+          "500": {
+            "description": "Internal Server Error",
+            "schema": {
+              "$ref": "#/definitions/ErrorResponse"
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Points"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ],
+        "description": "delete points based on ID",
+        "operationId": "delete point by id",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of retro point to delete",
+            "required": true,
+            "type": "integer",
+            "format": "int64"
+          }
+        ],
         "responses": {
           "200": {
             "description": "point response",
@@ -234,15 +326,17 @@
           }
         }
       }
-      
     }
   },
-
   "definitions": {
     "Author": {
       "type": "object",
-      "required": ["name", "email", "password"],
-      "properties": {            
+      "required": [
+        "name",
+        "email",
+        "password"
+      ],
+      "properties": {
         "name": {
           "type": "string",
           "example": "Tim Cook"
@@ -257,25 +351,26 @@
         }
       }
     },
-    "Point":{
-      "type":"object",
-      "required":["title","category"],
-      "properties":{
-       
-        "title":{
-          "type":"string",
-          "example":"sprint 1"
+    "Point": {
+      "type": "object",
+      "required": [
+        "title",
+        "category"
+      ],
+      "properties": {
+        "title": {
+          "type": "string",
+          "example": "sprint 1"
         },
-        "description":{
-          "type":"string",
-          "example":"Involves Bug fixing and release x feature of y module"
+        "description": {
+          "type": "string",
+          "example": "Involves Bug fixing and release x feature of y module"
         },
-        "category":{
-          "type":"enum",
-          "example":"Went well"
+        "category": {
+          "type": "string",
+          "example": "Went well"
         }
       }
-
     },
     "ErrorResponse": {
       "type": "object",
